<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false">

    <com.yarolegovich.discretescrollview.DiscreteScrollView
        android:id="@+id/rvAlbumList"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        app:dsv_orientation="horizontal"
        />

    <ImageView
        android:id="@+id/ivAlbum"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:transitionName="@string/square_blue_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/tvToAlbumList"
            android:text="跳转专辑列表"
            style="@style/Common_Button"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tvToSongList"
            android:text="跳转歌曲列表"
            style="@style/Common_Button"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tvToWords"
            android:text="跳转歌词页面"
            style="@style/Common_Button"
            android:layout_weight="1" />

    </LinearLayout>



    <FrameLayout
        android:id="@+id/fmMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:background="@mipmap/c_route_bg_left_focused"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:transitionName="@string/share_iv_menu">

        <ImageView
            android:id="@+id/ivImgPrevious"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:rotation="180"
            android:src="@mipmap/iv_menu_next"
            android:transitionName="@string/share_iv_menu_previous"/>

        <ImageView
            android:id="@+id/ivImgPause"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:src="@mipmap/iv_menu_pause"
            android:transitionName="@string/share_iv_menu_pause"
            />

        <ImageView
            android:id="@+id/ivImgNext"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:src="@mipmap/iv_menu_next"
            android:transitionName="@string/share_iv_menu_next"
            />


    </FrameLayout>

</FrameLayout>